...
    <TextView
        android:id="@+id/sync_logs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/sync_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sync_progress"
        app:layout_constraintVertical_weight="1"
        tools:text="Лог сообщений" />

...
