<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/main">
        <menu>
            <item
                android:id="@+id/nav_sync"
                android:icon="@drawable/ic_sync_gray_24dp"
                android:title="@string/synchronization" />

            <item
                android:visible="false"
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_baseline_import_contacts_24"
                android:title="@string/my_contacts" />

            <item
                android:id="@+id/nav_statistic"
                android:icon="@drawable/ic_show_chart_black_24dp"
                android:title="@string/statistic" />
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_baseline_feedback_24"
                android:title="@string/feedback" />

            <item
                android:id="@+id/nav_feedback_answers"
                android:icon="@drawable/ic_baseline_question_answer_24"
                android:title="@string/notifications"
                android:visible="false"/>

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_doc"
                android:icon="@drawable/ic_baseline_help_24"
                android:title="@string/help"/>

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_gray_24dp"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
