<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/point_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/point_filter"
        android:icon="@drawable/ic_filter_off_24dp"
        android:title="@string/routes_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/point_feedback"
        android:icon="@drawable/ic_baseline_feedback_24"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/point_zero_priority"
        android:title="@string/hide_zero_priority"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_baseline_help_outline_24"
        android:title="@string/help"
        app:showAsAction="always"/>

</menu>