...
    <string name="versionToast">Версия приложения %s.%s от %s - %s.</string>
    <string name="versionShort">Версия: %s</string>
    <string name="alphaText">альфа версия</string>
    <string name="betaText">бета версия</string>
    <string name="releaseCandidateText">выпуск-кандидат</string>
    <string name="productionText">публичный выпуск</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="confirmExit">Вы уверены что хотите выйти?</string>
    <string name="accessDenied">Доступ к приложению ограничен. Нет соответствующей роли, обратитесь к администратору.</string>
    <string name="serverNotAvailable">Сервер не доступен</string>
    <string name="offlineDenied">Авторизации в offline не доступна, требуется выполнить вход в online</string>
    <string name="signOutMessage">Нажмите повторно для выхода из приложения.</string>
    <string name="synchronization">Синхронизация</string>
...
