...
        android:visibility="gone"
        tools:visibility="visible"
        android:elevation="4dp"
        tools:targetApi="lollipop" />

    <ru.mobnius.vote.ui.component.PinCodeLinLay
        android:id="@+id/pinFragment_pclTop"
        android:layout_marginTop="@dimen/size_s_24"
        app:layout_constraintBottom_toTopOf="@+id/pinFragment_llDigits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
...

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/pin_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drop_pin_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
